[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcparmory-github"
version = "1.0.6"
description = "Manage repositories, users, releases, and automate GitHub workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.0,<2.0.0",
    "fastmcp>=3.2.4",
    "httpx>=0.27.0,<1.0.0",
    "mcp",
    "pydantic>=2.0.0,<3.0.0",
    "PyNaCl",
    "python-dotenv>=1.0.0,<2.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.scripts]
mcparmory-github = "server:main"

[project.urls]
Homepage = "https://mcparmory.com"
Repository = "https://github.com/mcparmory/registry"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "*.json",
    ".env*",
    ".mcp.json",
    "Dockerfile",
    "requirements.txt",
    "dist",
]
