[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcparmory-netlicensing"
version = "1.0.0"
description = "MCP server for Labs64 NetLicensing RESTful API Test Center"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.scripts]
mcparmory-netlicensing = "server:main"

[project.urls]
Homepage = "https://mcparmory.com"
Repository = "https://github.com/mcparmory/registry"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "*.json",
    ".env*",
    ".mcp.json",
    "Dockerfile",
    "requirements.txt",
    "dist",
]
